[package]
name = "enamel"
version = "0.3.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "A simple OpenGL interface overlay for use with Glium."
documentation = "https://github.com/cogciprocate/enamel"
homepage = "https://github.com/cogciprocate/enamel"
repository = "https://github.com/cogciprocate/enamel"
readme = "README.md"
keywords = ["opengl", "interface"]
license = "MIT"
exclude = ["target/*", "*.png", "bak/*"]

[dependencies]
# glium = "0.14"
glium = "0.17"
# glium_text = "0.9"
# glium_text_rusttype = "0.11"
glium_text_rusttype = "*"
find_folder = "0.3"

[dev-dependencies]
colorify = "0.1"

# [dev-dependencies.colorify]
# path = "/home/nick/src/github.com/cogciprocate/colorify"